fixed dalmore picture spacing on desktop

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1217,6 +1217,7 @@ section.our-story.open {
         width: 100%;
         height: 100%;
         background-size: cover;
+        margin: 0;
     }
     
     .gallery.large.vertical {
